@@ -16,12 +16,48 @@
  */
 package org.apache.lucene.search;
 
+import java.io.IOException;
 import java.util.stream.LongStream;
 import java.util.stream.StreamSupport;
+import org.apache.lucene.document.Document;
+import org.apache.lucene.document.FeatureField;
+import org.apache.lucene.index.DirectoryReader;
+import org.apache.lucene.index.ImpactsEnum;
+import org.apache.lucene.index.IndexWriter;
+import org.apache.lucene.index.IndexWriterConfig;
+import org.apache.lucene.index.LeafReader;
+import org.apache.lucene.index.PostingsEnum;
+import org.apache.lucene.index.TermsEnum;
+import org.apache.lucene.store.ByteBuffersDirectory;
+import org.apache.lucene.store.Directory;
+import org.apache.lucene.util.BytesRef;
 import org.apache.lucene.util.PriorityQueue;
 
 /** Util class for Scorer related methods */
 class ScorerUtil {
+
+  private static final Class<?> DEFAULT_IMPACTS_ENUM_CLASS;
+
+  static {
+    try (Directory dir = new ByteBuffersDirectory();
+        IndexWriter w = new IndexWriter(dir, new IndexWriterConfig())) {
+      Document doc = new Document();
+      doc.add(new FeatureField("field", "value", 1f));
+      w.addDocument(doc);
+      try (DirectoryReader reader = DirectoryReader.open(w)) {
+        LeafReader leafReader = reader.leaves().get(0).reader();
+        TermsEnum te = leafReader.terms("field").iterator();
+        if (te.seekExact(new BytesRef("value")) == false) {
+          throw new Error();
+        }
+        ImpactsEnum ie = te.impacts(PostingsEnum.FREQS);
+        DEFAULT_IMPACTS_ENUM_CLASS = ie.getClass();
+      }
+    } catch (IOException e) {
+      throw new Error(e);
+    }
+  }
+
   static long costWithMinShouldMatch(LongStream costs, int numScorers, int minShouldMatch) {
     // the idea here is the following: a boolean query c1,c2,...cn with minShouldMatch=m
     // could be rewritten to:
@@ -45,5 +81,31 @@ class ScorerUtil {
         };
     costs.forEach(pq::insertWithOverflow);
     return StreamSupport.stream(pq.spliterator(), false).mapToLong(Number::longValue).sum();
+  }
+
+  /**
+   * Optimize a {@link DocIdSetIterator} for the case when it is likely implemented via an {@link
+   * ImpactsEnum}. This return method only has 2 possible return types, which helps make sure that
+   * calls to {@link DocIdSetIterator#nextDoc()} and {@link DocIdSetIterator#advance(int)} are
+   * bimorphic at most and candidate for inlining.
+   */
+  static DocIdSetIterator likelyImpactsEnum(DocIdSetIterator it) {
+    if (it.getClass() != DEFAULT_IMPACTS_ENUM_CLASS
+        && it.getClass() != FilterDocIdSetIterator.class) {
+      it = new FilterDocIdSetIterator(it);
+    }
+    return it;
+  }
+
+  /**
+   * Optimize a {@link Scorable} for the case when it is likely implemented via a {@link
+   * TermScorer}. This return method only has 2 possible return types, which helps make sure that
+   * calls to {@link Scorable#score()} are bimorphic at most and candidate for inlining.
+   */
+  static Scorable likelyTermScorer(Scorable scorable) {
+    if (scorable.getClass() != TermScorer.class && scorable.getClass() != FilterScorable.class) {
+      scorable = new FilterScorable(scorable);
+    }
+    return scorable;
   }
 }
