@@ -70,7 +70,7 @@ public class TestDisiPriorityQueue extends LuceneTestCase {
   private static DisiWrapper wrapper(DocIdSetIterator iterator) throws IOException {
     Query q = new DummyQuery(iterator);
     Scorer s = q.createWeight(null, ScoreMode.COMPLETE_NO_SCORES, 1.0f).scorer(null);
-    return new DisiWrapper(s);
+    return new DisiWrapper(s, random().nextBoolean());
   }
 
   private static DocIdSetIterator randomDisi(Random r) {
