@@ -90,6 +90,9 @@ Optimizations
 * GITHUB#14014: Filtered disjunctions now get executed via `MaxScoreBulkScorer`.
   (Adrien Grand)
 
+* GITHUB#14023: Make JVM inlining decisions more predictable in our main
+  queries. (Adrien Grand)
+
 Bug Fixes
 ---------------------
 * GITHUB#13832: Fixed an issue where the DefaultPassageFormatter.format method did not format passages as intended
